Changed forecast templates to text blocks